alpm-db/tests/parse_errors/desc/missing_name.desc
%VERSION%
1.0.0-1

%DESC%
Missing name
